Fix layer rearranging on mobile

--- a/src/components/SideBar/LayersGroup/LayersItem.module.css
+++ b/src/components/SideBar/LayersGroup/LayersItem.module.css
@@ -20,6 +20,8 @@
 }
 
 .handle {
+    /* Needed because otherwise you can't rearrange layers without scrolling */
+    touch-action: none;
     cursor: move;
 }
 
